fixes issue with react-tabs appearing distorted on different devices and collapsed screens

--- a/client/public/main.css
+++ b/client/public/main.css
@@ -350,7 +350,7 @@ color: #050091;
   width: 80%;
   top: 47%;
   left: 10%;
-  position: absolute;
+  position: relative;
   margin: auto;
 }
 
